--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
            <div class="container">
-                  <img src="images/banner/banner2.png" alt="">
+                  <img class="img-bg" src="images/banner/banner2.png" alt="">
                     <div class="text-block">
                         <h3 class="text-title">All Thinks Are
                             Possible If You believe</h3>
@@ -20,7 +20,80 @@
            </div>
     </header>
     <main>
-
+        <section>
+        <div class="year">
+            <img src="images/person.png" alt="">
+            <div class="year-info">
+                  <h3 class="title">My failures of 
+                    previous year</h3>
+                  <p class="dis">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                  <ul class="list">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+                  </div>
+        </div>
+        </section>
+        <section class="plans">
+                   <h3>My Plans</h3>
+                   <div class="plan-container">
+                    <div class="plan">
+                        <img src="images/icons/web.png" alt="">
+                        <p class="plan-title">Web Development</p>
+                        <p class="plan-dis">I want to start</p>
+                    </div>
+                    <div class="plan">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="plan-title">Javascript</p>
+                        <p class="plan-dis">I want to learn</p>
+                    </div>
+                    <div class="plan">
+                        <img src="images/icons/smoke.png" alt="">
+                        <p class="plan-title">Smoking Habit</p>
+                        <p class="plan-dis">I want to end</p>
+                    </div>
+                    <div class="plan">
+                        <img src="images/icons/ecom.png" alt="">
+                        <p class="plan-title">ecommerce</p>
+                        <p class="plan-dis">I want to develop</p>
+                    </div>
+                   </div>
+        </section>
+        <section>
+            <div class="watch">
+                <img class="watch-img" src="images/watch.png" alt="">
+                <img class="gradient" src="images/gradient1.png" alt="">
+                <h3 class="new-exp">Awlays keep a positive mindset</h3>
+                <button class="btn-call">Call Now</button>
+            </div>
+        </section>
+         <section class="contact">
+                   <div>
+                         <h3 class="title-t">Future</h3>
+                         <p class="sic">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                         <p class="email">Email : info@gmail.com</p>
+                         <p class="phone">Phone : 01500 00 00 00</p>
+                         <a href="">
+                            <img class="icon" src="images/icons/fb.png" alt="">
+                         </a>
+                         <a href="">
+                            <img src="images/icons/twitter.png" alt="">
+                         </a>
+                         <a href="">
+                            <img src="images/icons/youtube.png" alt="">
+                         </a>
+                   </div>
+                   <div>
+                        <h3>Subscribe</h3>
+                        <form action="">
+                            <input class="action" type="email" name="" id="" placeholder="Your Email">
+                        </form>
+                        <button class="sub-bt">Subscribe</button>
+                   </div>
+         </section>
     </main>
     <footer>
         
